...
                android:paddingLeft="@dimen/margin_8dp"
                android:text="TextView"
                android:textSize="@dimen/secondary_text_size" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipeIngredientsRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsTV">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</FrameLayout>

