...
                            android:text="Steps"
                            android:textAlignment="gravity"
                            android:textSize="@dimen/primary_text_size" />
                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recipeStepsRV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"

                        />
...
